<resources>
    <string name="app_name">Tweek Labs HackTask</string>
    <string name="img_content">Logo of Tweaks Labs</string>
    <string name="passwordHint">Password</string>
    <string name="signIn_content">Sign in button</string>
    <string name="signIn_text">Sign In</string>
    <string name="phoneNum">Phone Number</string>
    <string name="forgotPassword">Forgot Password?</string>

    <string name="noAccount">Don\'t have an Account?</string>

    <string name="signUp_text">Sign Up</string>
    <string name="athleteName">Athlete Name</string>
    <string name="athleteSport">Athlete Sport</string>

    <string name="userIcon">This is the user icon</string>
    <string name="defaultText">TextView</string>
    <string name="background">Background color</string>
    <string name="balls">%d\nBalls Bowled</string>
    <string name="numSessions">%d\nSessions</string>
    <string name="AthleteSessionsHeading">Athlete Sessions</string>
    <string name="ballDescription">This is a ball</string>
    <string name="sessionDescription">This is the number of sessions</string>

</resources>