<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="248dp"
        android:layout_height="200dp"
        android:contentDescription="@string/img_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_dark_text" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/phoneNum"
        android:inputType="textPersonName|phone"
        android:minHeight="48dp"
        android:text="@string/phoneNum_text"
        android:textColor="@color/orange1"
        android:textColorHighlight="@color/orange_last"
        android:textColorHint="@color/orange1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/orange1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/orange1"
        android:contentDescription="@string/signIn_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/signIn_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/phoneNumber"
        app:layout_constraintStart_toStartOf="@id/phoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        tools:ignore="RedundantDescriptionCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/forgotPassword"
        android:textColor="@color/orange1"
        app:layout_constraintStart_toStartOf="@id/Password"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/NoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/noAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/orange1"
        android:fontFamily="@font/open_sans"
        android:text="@string/signUp_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/signIn"
        app:layout_constraintStart_toStartOf="@+id/signIn"
        app:layout_constraintTop_toBottomOf="@+id/NoAccount"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>